bunch of things, I'm afraid

--- a/agent/CMakeLists.txt
+++ b/agent/CMakeLists.txt
@@ -4,8 +4,8 @@ set (GRID_LOCATION /home/matish/programmi/bwi_gridworld/grid/)
 
 cmake_minimum_required(VERSION 2.6)
 
-include_directories(${GRID_LOCATION}/include)
+include_directories(${GRID_LOCATION}/include include)
 
-add_library(agent SHARED src/Agent.cpp)
+add_library(agent SHARED src/RandomAgent.cpp)
  
  
