--- a/grid/CMakeLists.txt
+++ b/grid/CMakeLists.txt
@@ -2,6 +2,8 @@ project(grid)
 
 cmake_minimum_required(VERSION 2.6)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 include_directories(include)
 
 add_library(grid SHARED src/grid.cpp)
